# DE-project

./: .flake8  .gitignore  .python-version  Makefile  README.md  conda_packages_backup.txt  environment.yml  main.py  pyproject.toml  requirements.txt
data/: processing_stats.json
notebooks/: test-monthly-report.ipynb  test-notebook.ipynb
requirements/: base.txt  dev.txt  prod.txt  staging.txt
src/download-clean-data/utils/: check_url.py  check_url_get_data.py
src/download_clean_data/process_data/: clean_data.py
src/download_clean_data/reports/: monthly_metrics.py  processing_stats.py
src/download_clean_data/utils/: check_url_get_data.py  exceptions.py  paths.py
