[project]
name = "de-coding-task"
version = "0.1.0"
description = "Data Engineering Coding Task"
requires-python = ">=3.10,<3.11"

dependencies = [
    "pandas>=2.3.0,<3.0.0",
    "numpy>=2.2.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "requests>=2.32.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.0",
    "pytest>=8.4.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.4.0",
    "jupyter>=1.1.0",
    "jupyterlab>=4.4.0",
    "ipykernel>=6.30.0",
    "ipython>=8.30.0",
]

staging = [
    "pytest>=8.4.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 79
target-version = ['py310']
extend-exclude = '''
/(
  \.git
  | \.venv
  | \.uv
  | notebooks
  | data
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/notebooks/*", "*/data/*"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.0",
    "pytest>=8.4.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.4.0",
    "jupyter>=1.1.0",
    "jupyterlab>=4.4.0",
    "ipykernel>=6.30.0",
    "ipython>=8.30.0",
]
